[package]
name = "d2b"
version = "0.1.4"
edition = "2018"

authors = ["Jeff Shen <jshen2014@hotmail.com>"]
description = "Command-line tool for generating bibtex from DOI or arXiv IDs."
repository = "https://github.com/al-jshen/d2b"
license = "MIT"

categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.7.1"
async-recursion = "0.3.2"
atom_syndication = "0.10.0"
chrono = "0.4.19"
clap = "2.33.3"
futures = "0.3.17"
indicatif = "0.16.2"
lazy_static = "1.4.0"
regex = "1.5.4"
reqwest = "0.11.4" 
tokio = { version = "1.11.0", features = ["full"] }

[profile.release]
lto = "fat"
codegen-units = 1
